@@ -1,4 +1,5 @@
 0.18
+ - Filter sitelinks via language.
 
 0.17 2024-06-21T14:06:58+02:00
  - Add Czech translation of texts.
